Task02: Remove -var-file switch

--- a/deployment/templates/tf-demo-template.yml
+++ b/deployment/templates/tf-demo-template.yml
@@ -16,7 +16,7 @@ stages:
         echo "Running Terraform init..."
         terraform init
         echo "Running Terraform plan..."
-        terraform plan -var-file
+        terraform plan
       displayName: 'Terraform plan'
       workingDirectory: ${{ parameters.rootFolder }}
       env:
