--- a/deployment/tf-demo-terraform.yml
+++ b/deployment/tf-demo-terraform.yml
@@ -6,6 +6,8 @@ variables:
   - group: Terraform-SPn
   - name: rootFolder
     value: '/'
+  - name: tfvarsFile
+    value: 'tf.demo.tfvars'
   - name: adoEnvironment
     value: 'demo'
   
