Task02: Current folder check

--- a/deployment/templates/tf-demo-template.yml
+++ b/deployment/templates/tf-demo-template.yml
@@ -13,6 +13,8 @@ stages:
     # vmImage: 'ubuntu-latest'
     steps:
     - script: |
+        echo "Checking current folder..."
+        dir
         echo "Running Terraform init..."
         terraform init
         echo "Running Terraform plan..."
